tests/fail/semantics/missing_annotation_parameter/main.kira
annotation Attribute {
    parameters {
        index: Int
    }
}

construct Widget {
    annotations {
        @Attribute;
    }
}

Widget Button() {
    @Attribute
    let position: Float = 0.0;

    content {
    }
}

@Main
function entry() {
    return;
}
